src/objects/PowerLoader__PowerLoaderField__c.object
<CustomObject>
    <fields>
        <fullName>PowerLoader__CSVField__c</fullName>
        <label>CSVField</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PowerLoader__ObjField__c</fullName>
        <label>ObjField</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PowerLoader__PowerLoaderMapping__c</fullName>
        <label>PowerLoaderMapping</label>
        <referenceTo>PowerLoader__PowerLoaderMapping__c</referenceTo>
        <relationshipName>PowerLoaderFields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PowerLoader__RelField__c</fullName>
        <label>RelField</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Grid Data Loader Field</label>
    <nameField>
        <displayFormat>PF-{0000000}</displayFormat>
        <label>PowerLoaderField ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grid Data Loader Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>